lavf/mpegenc: Print a warning if ac3, pcm_s16be or dts are muxed into mpeg1.

Some media players don't play the resulting files.
The warning should help users to avoid the issues described in ticket #1720.